fix: checkbox alignment

--- a/frontend/src/Components/PurchaseFeedbackForm/PurchaseFeedbackForm.module.scss
+++ b/frontend/src/Components/PurchaseFeedbackForm/PurchaseFeedbackForm.module.scss
@@ -1,10 +1,15 @@
 .checkboxContainer {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
+  flex-direction: row;
   max-width: 15rem;
 }
 
+.checkbox {
+  width: 3rem;
+}
+
 .title {
+  margin-left: 0.45rem;
   font-weight: 700;
   text-decoration: solid;
   font-size: 1.8em;
@@ -17,4 +22,9 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   gap: 10px;
+  max-width: 30rem;
+}
+
+.questionContainer {
+  margin-left: 0.45rem;
 }
